<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
        
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#A5C3B0C0" >


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="@string/verHome"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@drawable/ic_home" />




                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/rHome" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="@string/cambiarPeso"
                android:orientation="vertical" >
                

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@drawable/ic_user" />


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/datosUser" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="@string/verAyuda"
                android:orientation="vertical" >
                

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@drawable/ic_info" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/rHelp" />

            </LinearLayout>

        </LinearLayout>

         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="0.7" >

             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:gravity="center_vertical|center_horizontal"
                 android:text="@string/rSemanal"
                 android:textSize="@dimen/padding_large"
                 android:textStyle="bold" />

         </LinearLayout>

         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="4" >




             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:orientation="vertical" >


                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
                     android:layout_weight="3"
                     android:orientation="vertical" >

                     <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="0dp" 
                         android:layout_weight="3"
                         android:orientation="vertical">
                         
                         <ListView android:id="@+id/android:list" android:layout_width="fill_parent"
							android:layout_height="wrap_content" android:layout_weight="1"
							android:stackFromBottom="false" android:transcriptMode="normal" />
						
						<!-- <TextView android:id="@+id/contactID" android:layout_width="0dp"
							android:layout_height="0dp" /> 
						
						<TextView android:id="@+id/contactName" android:textStyle="bold"
							android:layout_width="0dp" android:layout_height="0dp" /> -->
                     </LinearLayout>

                 </LinearLayout>

             </LinearLayout>

         </LinearLayout>

         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#A5C3B0C0" >
            

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="@string/verLASeleccionadas"
                android:orientation="vertical" >


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@drawable/ic_actividad" />


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/activity" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="@string/verComidas"
                android:orientation="vertical" >
                

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@drawable/ic_food" />


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/food" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="@string/verHConsulta"
                android:orientation="vertical" >
                

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@drawable/ic_history" />


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/historial" />

            </LinearLayout>
            
        </LinearLayout>
        
    </LinearLayout>
    
</RelativeLayout>